@@ -54,6 +54,7 @@ import com.microsoft.identity.common.java.logging.DiagnosticContext;
 import com.microsoft.identity.common.java.logging.Logger;
 import com.microsoft.identity.common.java.logging.RequestContext;
 import com.microsoft.identity.common.java.marker.CodeMarkerManager;
+import com.microsoft.identity.common.java.opentelemetry.OtelContextExtension;
 import com.microsoft.identity.common.java.request.SdkType;
 import com.microsoft.identity.common.java.result.AcquireTokenResult;
 import com.microsoft.identity.common.java.result.FinalizableResultFuture;
@@ -81,6 +82,7 @@ import java.util.concurrent.TimeUnit;
 import java.util.concurrent.TimeoutException;
 
 import edu.umd.cs.findbugs.annotations.Nullable;
+import io.opentelemetry.context.Context;
 import lombok.NonNull;
 
 public class CommandDispatcher {
@@ -251,7 +253,7 @@ public class CommandDispatcher {
                 finalFuture.whenComplete(getCommandResultConsumer(command));
             }
 
-            sSilentExecutor.execute(new Runnable() {
+            sSilentExecutor.execute(OtelContextExtension.wrap(new Runnable() {
                 @Override
                 public void run() {
                     codeMarkerManager.markCode(ACQUIRE_TOKEN_SILENT_EXECUTOR_START);
@@ -307,7 +309,7 @@ public class CommandDispatcher {
                     }
                     codeMarkerManager.markCode(ACQUIRE_TOKEN_SILENT_FUTURE_OBJECT_CREATION_END);
                 }
-            });
+            }));
             return finalFuture;
         }
     }
@@ -338,7 +340,7 @@ public class CommandDispatcher {
         synchronized (mapAccessLock) {
             final FinalizableResultFuture<CommandResult> finalFuture = new FinalizableResultFuture<>();
             finalFuture.whenComplete(getCommandResultConsumer(command));
-            sSilentExecutor.execute(new Runnable() {
+            sSilentExecutor.execute(OtelContextExtension.wrap(new Runnable() {
                 @Override
                 public void run() {
 
@@ -364,7 +366,7 @@ public class CommandDispatcher {
                     }
 
                 }
-            });
+            }));
             return finalFuture;
         }
     }
@@ -645,7 +647,7 @@ public class CommandDispatcher {
                     }
                 }
 
-                sInteractiveExecutor.execute(new Runnable() {
+                sInteractiveExecutor.execute(OtelContextExtension.wrap(new Runnable() {
                     @Override
                     public void run() {
                         final CommandParameters commandParameters = command.getParameters();
@@ -695,7 +697,7 @@ public class CommandDispatcher {
                             DiagnosticContext.INSTANCE.clear();
                         }
                     }
-                });
+                }));
             }
         }
 
